# finances

./: .env  Cargo.toml  schema.sql
src/: auth.rs  main.rs  result.rs
src/routes/: user.rs
